# gh-bot

./: .pre-commit-config.yaml  README.md  pyproject.toml
app/: github.py  templates.py
